VM-142 Cambio de limites endpoint
